# sqlx-playground

./: .env  Cargo.toml  LICENSE  README.md  sql-playground.sqlite
migrations/sqlite/: 20240205211224_book.down.sql  20240205211224_book.up.sql
src/: main.rs
