[package]
name = "sqlx-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dotenvy = "0.15.7"
libsqlite3-sys = "0.27.0"
sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio", "macros"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }

